--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Sah-Schemas-URL
 
+0.002   2016-07-22 (PERLANCAR)
+
+        - No functional changes.
+
+        - [build] Rebuild, forgot to activate DZP:Sah::Schemas and
+          PWP:Sah::Schemas.
+
+
 0.001   2016-07-22 (PERLANCAR)
 
         - First release.
