--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.003   2017-02-25 (PERLANCAR)
+
+        - [Incompatible] Change type of url from str to URI object, provide
+          coercion rule from str.
+
+
 0.002   2016-07-22 (PERLANCAR)
 
         - No functional changes.
