--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.004   2017-03-09 (PERLANCAR)
+
+	- [Bugfix] obj::str_url coercion rule must not be enabled by
+	  default for all object, only for 'url' schema.
+
+
 0.003   2017-02-25 (PERLANCAR)
 
         - [Incompatible] Change type of url from str to URI object, provide
