--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.007   2018-06-20 (PERLANCAR)
+
+	- Add test prereq to URI [RT#125618].
+
+
 0.006   2018-06-05 (PERLANCAR)
 
 	- [Bugfix] Depend on newer version of Data::Sah (0.891)
