--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.009   2019-05-28 (PERLANCAR)
+
+	- [ux] Add schema: urls (array of urls).
+
+
 0.008   2018-06-26 (PERLANCAR)
 
         - [build] Rebuild to fix circular dependency (dependency to package
