--- a/Changes
+++ b/Changes
@@ -1,39 +1,39 @@
-0.008   2018-06-26 (PERLANCAR)
+0.008   2018-06-26  Released-By: PERLANCAR
 
         - [build] Rebuild to fix circular dependency (dependency to package
           Data::Sah::Coerce::str::str_url provided by us) [RT#125676].
 
 
-0.007   2018-06-20 (PERLANCAR)
+0.007   2018-06-20  Released-By: PERLANCAR
 
 	- Add test prereq to URI [RT#125618].
 
 
-0.006   2018-06-05 (PERLANCAR)
+0.006   2018-06-05  Released-By: PERLANCAR
 
 	- [Bugfix] Depend on newer version of Data::Sah (0.891)
 	  [RT#125477].
 
 
-0.005   2018-06-04 (PERLANCAR)
+0.005   2018-06-04  Released-By: PERLANCAR
 
 	- Update to Data::Sah::Coerce 0.025 (coerce rule module metadata
 	  version 3).
 
 
-0.004   2017-03-09 (PERLANCAR)
+0.004   2017-03-09  Released-By: PERLANCAR
 
 	- [Bugfix] obj::str_url coercion rule must not be enabled by
 	  default for all object, only for 'url' schema.
 
 
-0.003   2017-02-25 (PERLANCAR)
+0.003   2017-02-25  Released-By: PERLANCAR
 
         - [Incompatible] Change type of url from str to URI object, provide
           coercion rule from str.
 
 
-0.002   2016-07-22 (PERLANCAR)
+0.002   2016-07-22  Released-By: PERLANCAR
 
         - No functional changes.
 
@@ -41,6 +41,6 @@
           PWP:Sah::Schemas.
 
 
-0.001   2016-07-22 (PERLANCAR)
+0.001   2016-07-22  Released-By: PERLANCAR
 
         - First release.
