--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.010   2019-07-25  Released-By: PERLANCAR; Urgency: medium
+
+	- Update metadata version of coerce rule module(s) 3->4.
+
+
 0.009   2019-05-28 (PERLANCAR)
 
 	- [ux] Add schema: urls (array of urls).
