--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.011   2019-11-29  Released-By: PERLANCAR; Urgency: medium
+
+	- Rename coerce rule modules (Data::Sah::Coerce 0.034+).
+
+
 0.010   2019-07-25  Released-By: PERLANCAR; Urgency: medium
 
 	- Update metadata version of coerce rule module(s) 3->4.
